--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -62,6 +62,16 @@
     font-weight: normal;
 }
 
+.color-1{
+    color: var(--my-1th-color) !important;
+}
+.color-2{
+    color: var(--my-2th-color) !important;
+}
+.color-3{
+    color: var(--my-3th-color) !important;
+} 
+
 body {
     min-height: 100vh;
     color: var(--color-text);
@@ -70,8 +80,29 @@ body {
     line-height: 1.6;
     font-family: Inter, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
         Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
-    font-size: 15px;
+    font-size: 0.9rem!important;
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+}
+
+.modal {
+    background: rgba(0, 0, 0, 0.5) !important;
+}
+.btn{
+    font-size: 0.9rem !important;
+    border-radius: 0.5rem !important;
+}
+
+.modal-backdrop {
+    display: none !important;
+}
+
+.title-text {
+    font-size: 1.2rem;
+    font-weight: 500;
+}
+p {
+    margin: 0 !important;
+    padding: 0 !important;
 }
