--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -62,15 +62,17 @@
     font-weight: normal;
 }
 
-.color-1{
+.color-1 {
     color: var(--my-1th-color) !important;
 }
-.color-2{
+
+.color-2 {
     color: var(--my-2th-color) !important;
 }
-.color-3{
+
+.color-3 {
     color: var(--my-3th-color) !important;
-} 
+}
 
 body {
     min-height: 100vh;
@@ -80,7 +82,7 @@ body {
     line-height: 1.6;
     font-family: Inter, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
         Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
-    font-size: 0.9rem!important;
+    font-size: 0.9rem !important;
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
@@ -89,7 +91,8 @@ body {
 .modal {
     background: rgba(0, 0, 0, 0.5) !important;
 }
-.btn{
+
+.btn {
     font-size: 0.9rem !important;
     border-radius: 0.5rem !important;
 }
@@ -102,7 +105,49 @@ body {
     font-size: 1.2rem;
     font-weight: 500;
 }
+
 p {
     margin: 0 !important;
     padding: 0 !important;
+}
+
+table {
+    border-collapse: separate !important;
+    border-spacing: 0 !important;
+    border-radius: 0.5rem;
+
+}
+
+
+tr:first-child th:first-child {
+    border-top-left-radius: 0.5rem;
+}
+
+tr:first-child th:last-child {
+    border-top-right-radius: 0.5rem;
+}
+
+tr:last-child td:first-child {
+    border-bottom-left-radius: 0.5rem !important;
+}
+
+tr:last-child td:last-child {
+    border-bottom-right-radius: 0.5rem !important;
+}
+
+.vtl-tablec,
+.vtl-thead,
+.vtl-thead-th {
+
+    background-color: var(--my-2th-color) !important;
+}
+
+.vtl-paging-change-div,
+.vtl-paging-info {
+    align-self: center;
+}
+
+td, th{
+    padding-top: 0.5rem !important;
+    padding-bottom: 0.5rem !important;
 }
