changes validations no finished bc prrin

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -151,3 +151,7 @@ td, th{
     padding-top: 0.5rem !important;
     padding-bottom: 0.5rem !important;
 }
+
+.toast{
+    background-color: white !important;
+}
