--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -3,14 +3,23 @@
 #app {
     height: 100vh;
 }
-.vtl-paging-change-div, .vtl-paging-info{
+
+.vtl-paging-change-div,
+.vtl-paging-info {
     visibility: hidden;
 }
-.btn-primary{
-    background-color: #114ba1 !important;
-    border-color: #114ba1 !important;
+
+.btn-primary {
+    background-color: var(--my-2th-color) !important;
+    border-color: var(--my-2th-color) !important;
 }
-.form-control-sm{
+
+.btn-secondary {
+    background-color: var(--my-5th-color) !important;
+    border-color: var(--my-5th-color) !important;
+}
+
+.form-control-sm {
     font-size: 0.9rem !important;
 }
 
@@ -21,4 +30,4 @@
 .modal.modal-static .modal-dialog {
     -webkit-transform: none !important;
     transform: none !important;
-  }
+}
