--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -15,6 +15,15 @@
     background-color: var(--my-3th-color) !important;
     border-color: var(--my-3th-color) !important;
 }
+.btn-primary-outline {
+    color: var(--my-1th-color) !important;
+    border-color: var(--my-3th-color) !important;
+}
+.btn-primary-outline:hover {
+
+    background-color: var(--my-3th-color) !important;
+}
+
 
 .btn-secondary {
     background-color: var(--my-5th-color) !important;
