--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -1,6 +1,7 @@
 /* color palette from <https://github.com/vuejs/theme> */
 :root {
     --my-1th-color: #ffffff;
+    --my-7th-color: #ffffff;
     --my-2th-color: #0D1321;
     --my-6th-color: #1D2D44;
     --my-4th-color: #3c678d;
