--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -89,3 +89,8 @@ input::-webkit-inner-spin-button {
 input[type=number] {
   -moz-appearance: textfield;
 }
+
+.text-secondary{
+    font-size: 0.8rem;
+  color: rgba(0, 0, 0, 0.575);
+}
