--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -52,13 +52,11 @@ body {
     color: var(--color-text);
     background: var(--color-background);
     transition: color 0.5s, background-color 0.5s;
-    line-height: 1.6;
-    font-family: Inter, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
-        Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+    
     font-size: 0.9rem !important;
-    text-rendering: optimizeLegibility;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
+    text-rendering: optimizeLegibility !important;
+    -webkit-font-smoothing: antialiased !important;
+    -moz-osx-font-smoothing: grayscale !important;
 }
 
 .modal {
@@ -90,6 +88,7 @@ body {
 }
 
 .title-text {
+    
     font-size: 1.2rem;
     font-weight: 500;
 }
