Modified home with statitics and notifications

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -89,8 +89,8 @@ body {
 
 .title-text {
     
-    font-size: 1.2rem;
-    font-weight: 500;
+    font-size: 1.2rem !important;
+    font-weight: 500 !important;
 }
 
 p {
