--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -18,7 +18,7 @@
 .btn-primary-outline {
   color: var(--my-1th-color) !important;
 
-  border-color: var(--my-6th-color) !important;
+  border-color: var(--my-border-color) !important;
 }
 .btn-primary-outline:hover {
   border-color: var(--my-3th-color) !important;
@@ -27,7 +27,7 @@
 
 .btn-secondary-outline {
   color: var(--my-1th-color) !important;
-  border-color: var(--my-6th-color) !important;
+  border-color: var(--my-border-color) !important;
 }
 .btn-secondary-outline:hover {
   border-color: var(--my-4th-color) !important;
@@ -71,13 +71,13 @@
 }
 .pagination {
   --bs-pagination-disabled-color: var(--my-6th-color) !important;
-  --bs-pagination-border-color: var(--my-6th-color) !important;
-  --bs-pagination-hover-border-color: var(--my-6th-color) !important;
-  --bs-pagination-disabled-border-color: var(--my-6th-color) !important;
+  --bs-pagination-border-color: var(--my-border-color) !important;
+  --bs-pagination-hover-border-color: var(--my-border-color) !important;
+  --bs-pagination-disabled-border-color: var(--my-border-color) !important;
 }
 .active > .page-link {
   background-color: var(--my-3th-color) !important;
-  border-color: var(--my-6th-color) !important;
+  border-color: var(--my-border-color) !important;
   cursor: default;
 }
 
