--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -1,4 +1,8 @@
 /* color palette from <https://github.com/vuejs/theme> */
+@font-face {
+  font-family: 'MyWebFont';
+  src: url('@/assets/fonts/RobotoCondensed-Regular.ttf') format('truetype');
+}
 :root {
   --my-1th-color: #ffffff;
   --my-2th-color: #0d1321;
@@ -62,7 +66,7 @@ body {
   color: var(--color-text);
   background: var(--color-background);
   transition: color 0.5s, background-color 0.5s;
-
+  font-family: MyWebFont !important;
   font-size: 1rem !important;
   text-rendering: optimizeLegibility !important;
   -webkit-font-smoothing: antialiased !important;
@@ -90,6 +94,9 @@ body {
   font-size: 1rem !important;
   border-radius: 100rem !important;
   border: none !important;
+
+  text-transform:uppercase ;
+  
 }
 .input-group > :not(:first-child):not(.dropdown-toggle):not(.dropdown-menu) {
   border-top-left-radius: 0 !important;
@@ -129,18 +136,19 @@ tr:first-child th:last-child {
   border-top-right-radius: var(--my-border-radius) !important;
 }
 
-tr:last-child td:first-child {
+/*tr:last-child td:first-child {
   border-bottom-left-radius: var(--my-border-radius) !important;
 }
 
 tr:last-child td:last-child {
   border-bottom-right-radius: var(--my-border-radius) !important;
-}
+}*/
 
 .vtl-tablec,
 .vtl-thead,
 .vtl-thead-th {
   background-color: var(--my-3th-color) !important;
+ 
 }
 
 .vtl-table thead th {
@@ -160,6 +168,10 @@ th {
   padding-top: 0.4rem !important;
   padding-bottom: 0.4rem !important;
 }
+th{
+  border: none !important;
+}
+
 
 .my-table td, .my-table th{
   padding-left: 0.75rem;
@@ -177,6 +189,12 @@ th:not(th:first-child) {
 td {
   border-top: none !important;
 }
+td,
+th {
+  border-right: none !important;
+  border-left: none !important;
+}
+
 
 /*td:not(td:last-child),
 th:not(th:last-child) {
